[tool.poetry]
name = "server-monitor"
version = "0.1.0"
description = "Server Monitor"
authors = ["VD"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
psutil = "^7.0.0"
requests = "^2.32.4"
websockets = "^15.0.1"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
influxdb-client = "^1.49.0"
flask = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
